--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!-- Scroll animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <title>Olasunkanmi Abdulsalam | Frontend Developer</title>
+    <title>Olasunkanmi Abdulsalam | Frontend Develope</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
