--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" >
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="My Portfolio Website" />
 
