--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" >
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="My Portfolio Website" />
+    <meta name="description" content="My portfolio website showcasing my relevant skills and projects" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -22,7 +22,7 @@
       <input type="email" name="email">
       <textarea name="message"></textarea>
     </form>
-    
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
