--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" >
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="%PUBLIC_URL%/me.png" />
     <meta name="description" content="My portfolio website showcasing my relevant skills and projects" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
