--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:image" content="%PUBLIC_URL%/me.jpeg" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/me.jpeg" />
+    <meta name="author" content="Olasunkanmi Abdulsalam" />
     <meta name="description" content="My portfolio website showcasing my relevant skills and projects" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
